Add finalized benches
Issues: Spring MVC no PSSR