@@ -2,7 +2,7 @@ import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 plugins {
-    id("io.quarkus") version "3.21.0"
+    id("io.quarkus") version "3.15.4"
     id("org.kordamp.gradle.jandex") version "1.0.0"
     kotlin("jvm")
 }
@@ -20,8 +20,8 @@ dependencies {
     implementation(project(":pssr-benchmark-repository"))
     implementation(project(":pssr-benchmark-repository-mem"))
 
-    implementation(enforcedPlatform("io.quarkus.platform:quarkus-bom:3.21.0"))
-    implementation("io.quarkus:quarkus-resteasy")
+    implementation(enforcedPlatform("io.quarkus.platform:quarkus-bom:3.15.4"))
+    implementation("io.quarkus:quarkus-rest")
     implementation("io.quarkus:quarkus-arc")
     implementation("io.quarkus:quarkus-kotlin")
 
@@ -30,6 +30,33 @@ dependencies {
     testImplementation(kotlin("test"))
     testImplementation("io.quarkus:quarkus-junit5")
     testImplementation("io.rest-assured:rest-assured")
+}
+
+configurations.all {
+    exclude(group = "org.jboss.slf4j", module = "slf4j-jboss-logmanager")
+}
+
+tasks.register<JavaExec>("runQuarkus") {
+    dependsOn(tasks.named("quarkusBuild"))
+    mainClass.set("benchmark.LaunchKt")
+    classpath = sourceSets["main"].runtimeClasspath
+    jvmArgs =
+        listOf(
+            "-Dquarkus.virtual-threads.enabled=false",
+        )
+    systemProperties = System.getProperties().entries.associate { (k, v) -> k.toString() to v.toString() }
+}
+
+tasks.register<JavaExec>("runQuarkusVirtual") {
+    dependsOn(tasks.named("quarkusBuild"))
+    mainClass.set("benchmark.LaunchKt")
+    classpath = sourceSets["main"].runtimeClasspath
+    jvmArgs =
+        listOf(
+            "-Dquarkus.virtual-threads.enabled=true",
+            "-Djdk.tracePinnedThreads",
+        )
+    systemProperties = System.getProperties().entries.associate { (k, v) -> k.toString() to v.toString() }
 }
 
 tasks.named("quarkusDependenciesBuild") {
